Correction z-index
Correction z-index pour la navigation

--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,12 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: black;
-	z-index: 55;
+	z-index: 50;
 }
 
 li {
     float: left;
-	z-index: 55;
+	z-index: 50;
 }
 
 li a {
@@ -36,12 +36,12 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-	z-index: 55;
+	z-index: 50;
 }
 
 li a:hover {
     background-color: grey;
-	z-index: 55;
+	z-index: 50;
 }
 /* FIN NAVIGATION */
 
